criacao das services do orquestrador

--- a/OnTheFly/OnTheFlyApp.csproj
+++ b/OnTheFly/OnTheFlyApp.csproj
@@ -7,11 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OnTheFly.Models\OnTheFly.Models.csproj" />
   </ItemGroup>
 
 </Project>
