adicionado pré configuração do appSettings

--- a/OnTheFlyApp.CompanyService/appsettings.json
+++ b/OnTheFlyApp.CompanyService/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "OnTheFlySettings": {
+        "CompanyCollectionName": "dbAirCraftMongodb",
+        "CompanyCollectionName": "dbAirCraftMongodb",
+        "CompanyCollectionName": "dbAirCraftMongodb",
+        "ConnectionString": "mongodb://localhost:27017",
+        "DatabaseName": "dbCompanyMongodb"
     }
-  },
-  "AllowedHosts": "*"
 }
