--- a/OnTheFlyApp.PassengerService/appsettings.json
+++ b/OnTheFlyApp.PassengerService/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "OnTheFlySettings": {
+        "PassengerCollectionName": "dbPassengerMongodb",
+        "PassengerCollectionName": "dbPassengerMongodb",
+        "PassengerCollectionName": "dbPassengerMongodb",
+        "ConnectionString": "mongodb://localhost:27017",
+        "DatabaseName": "dbPassengerMongodb"
     }
-  },
-  "AllowedHosts": "*"
 }
