--- a/OnTheFlyApp.SaleService/appsettings.json
+++ b/OnTheFlyApp.SaleService/appsettings.json
@@ -1,9 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "OnTheFlySettings": {
+        "SaleCollectionName": "dbSaleMongodb",
+        "SaleCollectionName": "dbSaleMongodb",
+        "SaleCollectionName": "dbSaleMongodb",
+        "ConnectionString": "mongodb://localhost:27017",
+        "DatabaseName": "dbSaleMongodb"
     }
-  },
-  "AllowedHosts": "*"
+
 }
