iniciado o processo de crud de  servico depassageiros

--- a/OnTheFlyApp.PassengerService/appsettings.json
+++ b/OnTheFlyApp.PassengerService/appsettings.json
@@ -6,11 +6,11 @@
         }
     },
     "AllowedHosts": "*",
-    "OnTheFlySettings": {
-        "PassengerCollectionName": "dbPassengerMongodb",
-        "PassengerCollectionName": "dbPassengerMongodb",
-        "PassengerCollectionName": "dbPassengerMongodb",
+    "PassengerServiceSettings": {
+        "PassengerCollectionName": "passenger",
+        "PassengerDeactivatedCollectionName": "passengerDeactivated",
+        "PassengerAddressCollectionName": "address",
         "ConnectionString": "mongodb://localhost:27017",
-        "DatabaseName": "dbPassengerMongodb"
+        "DatabaseName": "Passengerdb"
     }
 }
