--- a/OnTheFlyApp.CompanyService/appsettings.json
+++ b/OnTheFlyApp.CompanyService/appsettings.json
@@ -6,11 +6,11 @@
         }
     },
     "AllowedHosts": "*",
-    "OnTheFlySettings": {
-        "CompanyCollectionName": "dbAirCraftMongodb",
-        "CompanyCollectionName": "dbAirCraftMongodb",
-        "CompanyCollectionName": "dbAirCraftMongodb",
+    "CompanyServiceSettings": {
+        "CompanyCollectionName": "company",
+        "CompanyDeactivatedCollectionName": "companyDeactivated",
+        "CompanyAddressCollectionName": "address",
         "ConnectionString": "mongodb://localhost:27017",
-        "DatabaseName": "dbCompanyMongodb"
+        "DatabaseName": "Companydb"
     }
 }
