--- a/OnTheFlyApp.AirCraftService/appsettings.json
+++ b/OnTheFlyApp.AirCraftService/appsettings.json
@@ -1,16 +1,15 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "OnTheFlySettings": {
-        "AirCraftCollectionName": "dbAirCraftMongodb",
-        "AirCraftCollectionName": "dbAirCraftMongodb",
-        "AirCraftCollectionName": "dbAirCraftMongodb",
-        "ConnectionString": "mongodb://localhost:27017",
-        "DatabaseName": "dbAirCraftMongodb"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "AirCraftServiceSettings": {
+    "AirCraftCollectionName": "aircraft",
+    "AircraftCompanyCollectionName": "company",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "AirCraftdb"
+  }
 }
