--- a/OnTheFlyApp.AirCraftService/OnTheFlyApp.AirCraftService.csproj
+++ b/OnTheFlyApp.AirCraftService/OnTheFlyApp.AirCraftService.csproj
@@ -7,11 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.19.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
   <ItemGroup>
