service e controller rodando

--- a/OnTheFlyApp.FlightService/appsettings.json
+++ b/OnTheFlyApp.FlightService/appsettings.json
@@ -1,9 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "FlightServiceSettings": {
+        "FlightCollectionName": "flight",
+        "FlightDeactivatedCollectionName": "flightDeactivated",
+        "FlightAirportCollectionName": "airport",
+        "FlightAirCraftCollectionName": "airCraft",
+        "ConnectionString": "mongodb://localhost:27017",
+        "DatabaseName": "Flightdb"
     }
-  },
-  "AllowedHosts": "*"
 }
