update company e appsettings

--- a/OnTheFlyApp.CompanyService/appsettings.json
+++ b/OnTheFlyApp.CompanyService/appsettings.json
@@ -8,7 +8,7 @@
     "AllowedHosts": "*",
     "CompanyServiceSettings": {
         "CompanyCollectionName": "company",
-        "CompanyDeactivatedCollectionName": "companyDeactivated",
+        "CompanyDeactivatedCollectionName": "companyDesactivated",
         "CompanyAddressCollectionName": "address",
         "ConnectionString": "mongodb://localhost:27017",
         "DatabaseName": "Companydb"
