Criada a classe Util como classe utilitaria para colocar as verificacoes gerais e melhorado o metodo de insert de passageiro

--- a/OnTheFlyApp.PassengerService/OnTheFlyApp.PassengerService.csproj
+++ b/OnTheFlyApp.PassengerService/OnTheFlyApp.PassengerService.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OnTheFly.Models\OnTheFly.Models.csproj" />
+    <ProjectReference Include="..\Utility\Utility.csproj" />
   </ItemGroup>
 
 </Project>
