--- a/OnTheFlyApp.CompanyService/OnTheFlyApp.CompanyService.csproj
+++ b/OnTheFlyApp.CompanyService/OnTheFlyApp.CompanyService.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OnTheFly.Models\OnTheFly.Models.csproj" />
+    <ProjectReference Include="..\OnTheFly\OnTheFlyApp.csproj" />
   </ItemGroup>
 
 </Project>
