criadas as DTOs das entidades e iniciado o CRUD da entidade Sales

--- a/OnTheFlyApp.SaleService/appsettings.json
+++ b/OnTheFlyApp.SaleService/appsettings.json
@@ -6,10 +6,9 @@
         }
     },
     "AllowedHosts": "*",
-    "OnTheFlySettings": {
+    "SaleServiceSettings": {
         "SaleCollectionName": "dbSaleMongodb",
-        "SaleCollectionName": "dbSaleMongodb",
-        "SaleCollectionName": "dbSaleMongodb",
+        "SaleDeactivedCollectionName": "dbSaleDeactivedMongodb",
         "ConnectionString": "mongodb://localhost:27017",
         "DatabaseName": "dbSaleMongodb"
     }
