--- a/OnTheFlyApp.CompanyService/OnTheFlyApp.CompanyService.csproj
+++ b/OnTheFlyApp.CompanyService/OnTheFlyApp.CompanyService.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\OnTheFly.Models\OnTheFly.Models.csproj" />
     <ProjectReference Include="..\OnTheFly\OnTheFlyApp.csproj" />
+    <ProjectReference Include="..\Utility\Utility.csproj" />
   </ItemGroup>
 
 </Project>
