feito o microsservico de sales usar filas de mensageria para os inserts

--- a/OnTheFlyApp.SaleService/appsettings.json
+++ b/OnTheFlyApp.SaleService/appsettings.json
@@ -8,6 +8,7 @@
     "AllowedHosts": "*",
     "SaleServiceSettings": {
         "SaleCollectionName": "dbSaleMongodb",
+        "ReservationCollectionName": "dbReservationMongodb",
         "SaleDeactivedCollectionName": "dbSaleDeactivedMongodb",
         "ConnectionString": "mongodb://localhost:27017",
         "DatabaseName": "dbSaleMongodb"
