--- a/OnTheFlyApp.FlightService/appsettings.json
+++ b/OnTheFlyApp.FlightService/appsettings.json
@@ -7,11 +7,11 @@
     },
     "AllowedHosts": "*",
     "FlightServiceSettings": {
-        "FlightCollectionName": "flight",
-        "FlightDeactivatedCollectionName": "flightDeactivated",
-        "FlightAirportCollectionName": "airport",
-        "FlightAirCraftCollectionName": "airCraft",
+        "FlightCollection": "Flight",
+        "FlightDeactivatedCollection": "Disabled",
+        "FlightAirportCollection": "Airport",
+        "FlightAirCraftCollection": "AirCraft",
         "ConnectionString": "mongodb://localhost:27017",
-        "DatabaseName": "Flightdb"
+        "Database": "DBFlight"
     }
 }
