mudanca na porta de conexao e alteracao nas conexoes com o banco de dados

--- a/OnTheFlyApp.PassengerService/appsettings.json
+++ b/OnTheFlyApp.PassengerService/appsettings.json
@@ -7,10 +7,17 @@
     },
     "AllowedHosts": "*",
     "PassengerServiceSettings": {
-        "PassengerCollectionName": "passenger",
-        "PassengerDeactivatedCollectionName": "passengerDeactivated",
-        "PassengerAddressCollectionName": "address",
+        "PassengerCollection": "Passenger",
+        "PassengerDisabledCollection": "Disabled",
+        "PassengerAddressCollection": "Address",
         "ConnectionString": "mongodb://localhost:27017",
-        "DatabaseName": "Passengerdb"
-    }
+        "Database": "DBPassenger"
+    },
+    //"Kestrel": {
+    //    "Endpoints": {
+    //        "Https": {
+    //            "Url": "https://localhost:5000"
+    //        }
+    //    }
+    //}
 }
