--- a/OnTheFlyApp.SaleService/appsettings.json
+++ b/OnTheFlyApp.SaleService/appsettings.json
@@ -7,11 +7,19 @@
     },
     "AllowedHosts": "*",
     "SaleServiceSettings": {
-        "SaleCollectionName": "dbSaleMongodb",
-        "ReservationCollectionName": "dbReservationMongodb",
-        "SaleDeactivedCollectionName": "dbSaleDeactivedMongodb",
+        "SaleCollection": "Sales",
+        "ReservationCollection": "Reservation",
+        "PassengerCollection": "Passenger",
+        "FlightCollection": "Flight",
+        "SaleDisabledCollection": "Disabled",
         "ConnectionString": "mongodb://localhost:27017",
-        "DatabaseName": "dbSaleMongodb"
-    }
-
+        "Database": "DBSales"
+    },
+    //"Kestrel": {
+    //    "Endpoints": {
+    //        "Https": {
+    //            "Url": "https://localhost:5004"
+    //        }
+    //    }
+    //}
 }
