mudado a porta para 5002

--- a/OnTheFlyApp.AirCraftService/appsettings.json
+++ b/OnTheFlyApp.AirCraftService/appsettings.json
@@ -7,9 +7,17 @@
   },
   "AllowedHosts": "*",
   "AirCraftServiceSettings": {
-    "AirCraftCollectionName": "aircraft",
-    "AircraftCompanyCollectionName": "company",
+    "AircraftCollection": "Aircraft",
+    "AircraftCompanyCollection": "Company",
+    "AircraftDisabledCollection": "Disabled",
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "AirCraftdb"
+    "Database": "DBAircraft"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "https://localhost:5002"
+      }
+    }
   }
 }
