--- a/OnTheFlyApp.AirCraftService/OnTheFlyApp.AirCraftService.csproj
+++ b/OnTheFlyApp.AirCraftService/OnTheFlyApp.AirCraftService.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OnTheFly.Models\OnTheFly.Models.csproj" />
+    <ProjectReference Include="..\Utility\Utility.csproj" />
   </ItemGroup>
 
 </Project>
