--- a/OnTheFlyApp.FlightService/appsettings.json
+++ b/OnTheFlyApp.FlightService/appsettings.json
@@ -13,5 +13,12 @@
         "FlightAirCraftCollection": "AirCraft",
         "ConnectionString": "mongodb://localhost:27017",
         "Database": "DBFlight"
-    }
+    }//,
+    //"Kestrel": {
+    //    "Endpoints": {
+    //        "Https": {
+    //            "Url": "https://localhost:5003"
+    //        }
+    //    }
+    //}
 }
