Ajuste tamanho cnpj companydto e verificação de campo

--- a/OnTheFlyApp.CompanyService/appsettings.json
+++ b/OnTheFlyApp.CompanyService/appsettings.json
@@ -7,10 +7,17 @@
     },
     "AllowedHosts": "*",
     "CompanyServiceSettings": {
-        "CompanyCollectionName": "company",
-        "CompanyDeactivatedCollectionName": "companyDesactivated",
-        "CompanyAddressCollectionName": "address",
+        "CompanyCollection": "Company",
+        "CompanyDisabledCollection": "Disabled",
+        "CompanyAddressCollection": "Address",
         "ConnectionString": "mongodb://localhost:27017",
-        "DatabaseName": "Companydb"
+        "DatabaseName": "DBCompany"
+    },
+    "Kestrel": {
+        "Endpoints": {
+            "Https": {
+                "Url": "https://localhost:5001"
+            }
+        }
     }
 }
