crud rodando com regra de negocios implementada

--- a/OnTheFlyApp.FlightService/appsettings.json
+++ b/OnTheFlyApp.FlightService/appsettings.json
@@ -8,9 +8,9 @@
     "AllowedHosts": "*",
     "FlightServiceSettings": {
         "FlightCollection": "Flight",
-        "FlightDeactivatedCollection": "Disabled",
-        "FlightAirportCollection": "Airport",
-        "FlightAirCraftCollection": "AirCraft",
+        "DisabledCollection": "Disabled",
+        "AirportCollection": "Airport",
+        "AirCraftCollection": "AirCraft",
         "ConnectionString": "mongodb://localhost:27017",
         "Database": "DBFlight"
     }//,
