--- a/OnTheFlyApp.AirCraftService/appsettings.json
+++ b/OnTheFlyApp.AirCraftService/appsettings.json
@@ -14,13 +14,13 @@
     "Database": "DBAircraft"
   },
 
-/*
-  "Kestrel": {
+
+  /*"Kestrel": {
     "Endpoints": {
       "Https": {
         "Url": "https://localhost:5002"
       }
     }
-  }
-  */
+  }*/
+  
 }
