feito a transferencia para disabled, deleted e restricted. melhoras nas validacoes de passageiros

--- a/OnTheFlyApp.PassengerService/appsettings.json
+++ b/OnTheFlyApp.PassengerService/appsettings.json
@@ -9,6 +9,8 @@
     "PassengerServiceSettings": {
         "PassengerCollection": "Passenger",
         "PassengerDisabledCollection": "Disabled",
+        "PassengerRestrictedCollection": "Restricted",
+        "PassengerDeletedCollection": "Deleted",
         "PassengerAddressCollection": "Address",
         "ConnectionString": "mongodb://localhost:27017",
         "Database": "DBPassenger"
