--- a/OnTheFlyApp.FlightService/appsettings.json
+++ b/OnTheFlyApp.FlightService/appsettings.json
@@ -9,6 +9,7 @@
     "FlightServiceSettings": {
         "FlightCollection": "Flight",
         "DisabledCollection": "Disabled",
+        "DeletedCollection": "Deleted",
         "AirportCollection": "Airport",
         "AirCraftCollection": "AirCraft",
         "ConnectionString": "mongodb://localhost:27017",
