--- a/OnTheFlyApp.FlightService/OnTheFlyApp.FlightService.csproj
+++ b/OnTheFlyApp.FlightService/OnTheFlyApp.FlightService.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OnTheFly.Models\OnTheFly.Models.csproj" />
+    <ProjectReference Include="..\Utility\Utility.csproj" />
   </ItemGroup>
 
 </Project>
