--- a/OnTheFlyApp.CompanyService/appsettings.json
+++ b/OnTheFlyApp.CompanyService/appsettings.json
@@ -8,7 +8,9 @@
     "AllowedHosts": "*",
     "CompanyServiceSettings": {
         "CompanyCollection": "Company",
+        "CompanyRestrictedCollection": "Restricted",
         "CompanyDisabledCollection": "Disabled",
+        "CompanyDeletedCollection": "Deleted",
         "CompanyAddressCollection": "Address",
         "ConnectionString": "mongodb://localhost:27017",
         "DatabaseName": "DBCompany"
