implementado collection de restritos e deletados

--- a/OnTheFlyApp.CompanyService/appsettings.json
+++ b/OnTheFlyApp.CompanyService/appsettings.json
@@ -8,6 +8,8 @@
     "AllowedHosts": "*",
     "CompanyServiceSettings": {
         "CompanyCollection": "Company",
+        "CompanyRestrictedCollection": "Restricted",
+        "CompanyDeletedCollection": "Deleted",
         "CompanyDisabledCollection": "Disabled",
         "CompanyAddressCollection": "Address",
         "ConnectionString": "mongodb://localhost:27017",
