fixacao das portas dos microsservicos

--- a/OnTheFlyApp.FlightService/appsettings.json
+++ b/OnTheFlyApp.FlightService/appsettings.json
@@ -14,12 +14,12 @@
         "AirCraftCollection": "AirCraft",
         "ConnectionString": "mongodb://localhost:27017",
         "Database": "DBFlight"
-    }//,
-    //"Kestrel": {
-    //    "Endpoints": {
-    //        "Https": {
-    //            "Url": "https://localhost:5003"
-    //        }
-    //    }
-    //}
+    },
+    "Kestrel": {
+        "Endpoints": {
+            "Https": {
+                "Url": "https://localhost:5003"
+            }
+        }
+    }
 }
