--- a/OnTheFlyApp.PassengerService/appsettings.json
+++ b/OnTheFlyApp.PassengerService/appsettings.json
@@ -15,11 +15,11 @@
         "ConnectionString": "mongodb://localhost:27017",
         "Database": "DBPassenger"
     },
-    //"Kestrel": {
-    //    "Endpoints": {
-    //        "Https": {
-    //            "Url": "https://localhost:5000"
-    //        }
-    //    }
-   // }
+    "Kestrel": {
+        "Endpoints": {
+            "Https": {
+                "Url": "https://localhost:5000"
+            }
+        }
+    }
 }
