--- a/OnTheFlyApp.CompanyService/appsettings.json
+++ b/OnTheFlyApp.CompanyService/appsettings.json
@@ -15,11 +15,11 @@
         "ConnectionString": "mongodb://localhost:27017",
         "DatabaseName": "DBCompany"
     },
-    /*"Kestrel": {
+    "Kestrel": {
         "Endpoints": {
             "Https": {
                 "Url": "https://localhost:5001"
             }
         }
-    }*/
+    }
 }
